# axum-django

./: .gitignore  Cargo.toml  README.md  manage.py  pyproject.toml
rustdjango/: api.py  asgi.py  settings.py  urls.py  wsgi.py
rustzola/: asgi.py  settings.py  urls.py  wsgi.py
src/: endpoints.rs  main.rs
